--- a/prod.env
+++ b/prod.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mortgage_database
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=notaryvm
+DB_USERNAME=laravel_user
+DB_PASSWORD=SuperSecurePa55!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -43,5 +43,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
 
